# generative-ai-financial-services-samples

./: CHANGELOG.MD  PULL_REQUEST_TEMPLATE.MD  README.md  SECURITY.MD  SUPPORT.MD
Intelligent Retrieval-Augmented Generation (RAG) for Proxy Documents - ProxyBot/: 04_run_cleanup.py  README.md  conda_installation.sh  installation.sh  requirements.txt  run_setup_processes.bat  run_setup_processes.sh
intelligent-mutual-fund-prospectus-document-processing/: .dockerignore  .env.example  .gitignore  app.py  (+7 more)
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/: .dockerignore  .gitignore  01_run_aoss.py  02_run_textract.py  03_run_ingestion.py  Dockerfile  README.md  app.py  config.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  run.sh  run_reviews.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/aoss/: aoss.py  aoss_logger.py  permissions.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/awsmanager/: bedrock.py  manager.py  s3_manager.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/data_pipeline/: pipeline.py  search.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/logics/: aossbot.py  aossclient.py  aossqueries.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/parameters/: logger.py  parameters.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/textract/: textract_logger.py  textract_util.py
intelligent-retrieval-augmented-generation-for-proxy-documents-proxybot/utils/: utils.py
(+62 files in other folders)
